# vertex-chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  chat_utils.py  config.py  main.py  vertexai_utils.py
app/db/: base.py  config.py  models.py  user_repository.py
