[project]
name = "vertex-chat-permission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.84.0",
    "psycopg2>=2.9.10",
    "ruff>=0.11.0",
    "sqlalchemy>=2.0.39",
    "streamlit>=1.43.2",
]
